--- a/Project.toml
+++ b/Project.toml
@@ -1,4 +1,4 @@
-name = "JuliaHealthLLM"
+name = "HealthLLM"
 uuid = "1de6b779-c1fb-4125-b891-fad447459241"
 authors = ["ParamThakkar123 <paramthakkar864@gmail.com> and TheCedarPrince <jacobszelko@gmail.com>"]
 version = "0.0.1"
